--- a/360/customer/about_us.html
+++ b/360/customer/about_us.html
@@ -14,6 +14,19 @@
         header {
             background-color: #050B17;
         }
+
+        textarea {
+            background-color: transparent;
+            border-radius: 10px;
+            font-family: 'Poppins', sans-serif;
+        }
+        textarea::placeholder {
+            color: #999; /* Set the color of the placeholder text */
+            padding-left: 15px;
+            padding-top: 12px;
+            line-height: 100%;
+            }
+
     </style>
 </head>
 <body>
