--- a/360/customer/about_us.html
+++ b/360/customer/about_us.html
@@ -139,7 +139,7 @@
                         <label for="feedback">Your Feedback:</label>
                         <textarea id="feedback" placeholder="Please leave your feedback here" name="Feedback"></textarea><br></br>
                     </div>
-                    <input type="submit" style="background-color: #28a745; color: #fff; padding: 10px 15px; border: none; cursor: pointer;" name="add_feedback" value="Submit">
+                    <input type="submit" style="background-color: #28a745; color: #fff; padding: 10px 15px; border: none; cursor: pointer; border-radius: 5px;" name="add_feedback" value="Submit">
                     </form>
                 </div>
             </div>
